# DeltaruneVita

./: .gitignore  BASELINE-INSTRUCTIONS.md  CHANGELOG.md  DLTVITA-0001-REPORT.md  README.md  RELEASE_NOTES_v0.53.md  RELEASE_NOTES_v0.54.md  RELEASE_NOTES_v0.55.md  RELEASE_NOTES_v0.56.md  RELEASE_NOTES_v0.57.md  index.html  manifest.js  manifest.json  notes.txt  notes_v060.txt
artifacts/current/: Deltarune.vpk
data/legacy-assets/: param.sfo  template.xml
data/legacy-assets/livearea/contents/: template.xml
docs/: PROGRESS.md
downloads/: INSTALL-PT-BR.txt
patches/: 0000.bsdiff  0001.bsdiff  0002.bsdiff  0003.bsdiff  0004.bsdiff  0005.bsdiff  0006.bsdiff  0007.bsdiff  0008.bsdiff  0009.bsdiff  0010.bsdiff  0011.bsdiff  0012.bsdiff  0013.bsdiff  0014.bsdiff  0015.bsdiff  0016.bsdiff  0017.bsdiff  0018.bsdiff  0019.bsdiff  0020.bsdiff  0021.bsdiff  0022.bsdiff  0023.bsdiff  0024.bsdiff  0025.bsdiff  0026.bsdiff  0027.bsdiff  0028.bsdiff  0029.bsdiff  0030.bsdiff  0031.bsdiff  0032.bsdiff  0033.bsdiff  0034.bsdiff  0035.bsdiff  0036.bsdiff  0037.bsdiff  0038.bsdiff  0039.bsdiff  (+31 more)
release/: Deltarune-v0.50.vpk
scripts/: build-butterscotch-probe.ps1  build-deltarune.ps1  prepare-butterscotch-data.ps1  prepare-deltarune-data.ps1  prepare-vita-mods.ps1  prepare-windows-data.ps1
src/butterscotch/: CMakeLists.txt  Makefile
src/butterscotch/.github/workflows/: build.yml  tests.yml
src/butterscotch/src/: data_win.c  data_win.h  overlay_file_system.c  overlay_file_system.h  renderer.h  runner.c  runner.h  runner_gamepad.c  runner_gamepad.h  utils.h  vm_builtins.c
src/butterscotch/src/audio/openal/: al_audio_system.c  al_audio_system.h
src/butterscotch/src/desktop/backends/: glfw3.c  sdl1.c
src/butterscotch/src/gl/: gl_renderer.c  gl_renderer.h
src/butterscotch/src/gl_common/: gl_common.c  gl_common.h  gl_wrappers.h
src/butterscotch/src/gl_legacy/: gl_legacy_renderer.c  gl_legacy_renderer.h
src/butterscotch/src/image/: image_decoder.c
src/butterscotch/src/ps2/: ps2_overlay.c
src/legacy/soloader/: CMakeLists.txt
src/legacy/soloader/source/: dynlib.c  main.c
src/legacy/soloader/source/reimpl/: asset_manager.cpp  controls.c  controls.h  cxx_guard.c  cxx_guard.h  egl.c  egl.h  time64.c  time64_config.h
src/legacy/soloader/source/utils/: diagnostic.c  diagnostic.h  init.c  logger.c  logger.h
src/legacy/yoyoloader/keymaps/: AndyDrawing.ini  BE Witches 20 08 2020.ini  Banana Game one.ini  BoboGooey_v2.ini  BrokenAether.ini  Bubble People GMS2.ini  DELTARUNE.ini  Day in the Life of a Harpy.ini  Feria.ini  GMTK_jam_2019.ini  Grimstorm.ini  Harpy Gaiden.ini  HauntedIceCream.ini  Heartbound.ini  Home_v15x.ini  HopOwl_19.ini  LD42.ini  LDCompo48.ini  LDJAM46.ini  Lonely_People_Potion_Shop.ini  Ludum dare 44 - Your life is currency.ini  Mosquito.ini  PLANTBRAWL5PURE.ini  PicoDay.ini  PlantSlash.ini  Post Void.ini  Presentable Liberty.ini  Ritual Jam Version.ini  Station.ini  Their_Eyes.ini  Transmute_Deluxe2.ini  Vice Dice.ini  aquris_win.ini  beemis.ini  catgame 5.ini  dog_game.ini  donteatmymindyoustupidmonsters.ini  dweepack.ini  hereliesfrog.ini  hithot.ini  (+9 more)
src/legacy/yoyoloader/loader/: config.h  main.c
src/legacy/yoyoloader/ports/deltarune/: README.md  yyl.cfg
src/vita-probe/: CMakeLists.txt
src/vita-probe/source/: main.c  playable_main.c  vita_borders.c  vita_borders.h  vita_settings.c  vita_settings.h  vita_video.c  vita_video.h  vitagl_probe.c
